src/com/sun/labs/minion/retrieval/parser/LuceneParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. LuceneParser.java */
    package com.sun.labs.minion.retrieval.parser;

    public class LuceneParser extends Parser/*@bgen(jjtree)*/implements LuceneParserTreeConstants, LuceneParserConstants {/*@bgen(jjtree)*/
  protected JJTLuceneParserState jjtree = new JJTLuceneParserState();
        public static void main(String args[]) throws Exception {
            LuceneParser p = new LuceneParser(System.in);
            SimpleNode n = (SimpleNode)p.doParse();
            n.dump(":");
        }

  final public SimpleNode doParse() throws ParseException {
                       /*@bgen(jjtree) doParse */
  LuceneASTdoParse jjtn000 = new LuceneASTdoParse(this, JJTDOPARSE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_1:
      while (true) {
        q();
        if (jj_2_1(20)) {
          ;
        } else {
          break label_1;
        }
      }
      jj_consume_token(0);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
            {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public void q() throws ParseException {
           /*@bgen(jjtree) q */
  LuceneASTq jjtn000 = new LuceneASTq(this, JJTQ);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_2(20)) {
        AND();
      } else if (jj_2_3(20)) {
        OR();
      } else if (jj_2_4(20)) {
        UND();
      } else if (jj_2_5(20)) {
        group();
      } else if (jj_2_6(20)) {
        term();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void AND() throws ParseException {
             /*@bgen(jjtree) AND */
  LuceneASTAND jjtn000 = new LuceneASTAND(this, JJTAND);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_7(20)) {
        OR();
      } else if (jj_2_8(20)) {
        UND();
      } else if (jj_2_9(20)) {
        term();
      } else if (jj_2_10(20)) {
        group();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      label_2:
      while (true) {
        jj_consume_token(AND);
        if (jj_2_11(20)) {
          AND();
        } else if (jj_2_12(20)) {
          OR();
        } else if (jj_2_13(20)) {
          UND();
        } else if (jj_2_14(20)) {
          term();
        } else if (jj_2_15(20)) {
          group();
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
        if (jj_2_16(20)) {
          ;
        } else {
          break label_2;
        }
      }
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
        jjtn000.operator = LuceneParserConstants.AND;
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void OR() throws ParseException {
            /*@bgen(jjtree) OR */
  LuceneASTOR jjtn000 = new LuceneASTOR(this, JJTOR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_17(20)) {
        UND();
      } else if (jj_2_18(20)) {
        term();
      } else if (jj_2_19(20)) {
        group();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      label_3:
      while (true) {
        jj_consume_token(OR);
        if (jj_2_20(20)) {
          OR();
        } else if (jj_2_21(20)) {
          UND();
        } else if (jj_2_22(20)) {
          term();
        } else if (jj_2_23(20)) {
          group();
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
        if (jj_2_24(2)) {
          ;
        } else {
          break label_3;
        }
      }
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
        jjtn000.operator = LuceneParserConstants.OR;
    } catch (Throwable jjte000) {
       if (jjtc000) {
         jjtree.clearNodeScope(jjtn000);
         jjtc000 = false;
       } else {
         jjtree.popNode();
       }
       if (jjte000 instanceof RuntimeException) {
         {if (true) throw (RuntimeException)jjte000;}
       }
       if (jjte000 instanceof ParseException) {
         {if (true) throw (ParseException)jjte000;}
       }
       {if (true) throw (Error)jjte000;}
    } finally {
       if (jjtc000) {
         jjtree.closeNodeScope(jjtn000, true);
       }
    }
  }

  final public void UND() throws ParseException {
             /*@bgen(jjtree) UND */
  LuceneASTUND jjtn000 = new LuceneASTUND(this, JJTUND);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      term();
      label_4:
      while (true) {
        term();
        if (jj_2_25(20)) {
          ;
        } else {
          break label_4;
        }
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void term() throws ParseException {
              /*@bgen(jjtree) term */
              LuceneASTterm jjtn000 = new LuceneASTterm(this, JJTTERM);
              boolean jjtc000 = true;
              jjtree.openNodeScope(jjtn000);Token t=null,v=null,unary=null;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NOT:
        unary = jj_consume_token(NOT);
        break;
      default:
        jj_la1[0] = jj_gen;
        ;
      }
        if (unary != null)
            jjtn000.unary = unary.kind;
      if (jj_2_26(20)) {
        field();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case VALIDCHAR:
        case PHRASE:
        case TERM:
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case TERM:
            t = jj_consume_token(TERM);
            break;
          case VALIDCHAR:
            t = jj_consume_token(VALIDCHAR);
            break;
          case PHRASE:
            t = jj_consume_token(PHRASE);
            break;
          default:
            jj_la1[1] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
       jjtree.closeNodeScope(jjtn000, true);
       jjtc000 = false;
         jjtn000.value = t.image;
          break;
        default:
          jj_la1[2] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void group() throws ParseException {
               /*@bgen(jjtree) group */
               LuceneASTgroup jjtn000 = new LuceneASTgroup(this, JJTGROUP);
               boolean jjtc000 = true;
               jjtree.openNodeScope(jjtn000);Token t=null;
    try {
      jj_consume_token(LP);
      q();
      jj_consume_token(RP);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void field() throws ParseException {
               /*@bgen(jjtree) field */
               LuceneASTfield jjtn000 = new LuceneASTfield(this, JJTFIELD);
               boolean jjtc000 = true;
               jjtree.openNodeScope(jjtn000);Token t=null,f=null;
    try {
      f = jj_consume_token(TERM);
        jjtn000.value = f.image;
      jj_consume_token(COLON);
      if (jj_2_27(20)) {
        range();
      } else if (jj_2_28(20)) {
        term();
      } else if (jj_2_29(20)) {
        group();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void range() throws ParseException {
               /*@bgen(jjtree) range */
               LuceneASTrange jjtn000 = new LuceneASTrange(this, JJTRANGE);
               boolean jjtc000 = true;
               jjtree.openNodeScope(jjtn000);Token low=null,high=null,lowType=null,highType=null;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LB:
        lowType = jj_consume_token(LB);
        break;
      case LC:
        lowType = jj_consume_token(LC);
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TERM:
        low = jj_consume_token(TERM);
        break;
      case PHRASE:
        low = jj_consume_token(PHRASE);
        break;
      case VALIDCHAR:
        low = jj_consume_token(VALIDCHAR);
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(TO);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TERM:
        high = jj_consume_token(TERM);
        break;
      case PHRASE:
        high = jj_consume_token(PHRASE);
        break;
      case VALIDCHAR:
        high = jj_consume_token(VALIDCHAR);
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case RB:
        highType = jj_consume_token(RB);
        break;
      case RC:
        highType = jj_consume_token(RC);
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
        if (lowType.kind == LuceneParserConstants.LB) {
            jjtn000.incLower = true;
        } else {
            jjtn000.incLower = false;
        }

        if (highType.kind == LuceneParserConstants.RB) {
            jjtn000.incUpper = true;
        } else {
            jjtn000.incUpper = false;
        }

        jjtn000.lower = low.image;
        jjtn000.upper = high.image;
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  final private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  final private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  final private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  final private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }
